--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,10 @@
 :root {
-    --vfl-y-padding: 16px;
-    --vfl-x-padding: 16px;
+    --vfl-padding-y: 16px;
+    --vfl-padding-x: 16px;
+    --border-width: 1px;
+    --outline-width-focus: 2px;
+    --border-color: lightgray;
+    --outline-color-focus: #80b4d3;
 }
 .float-label {
     display: flex;
@@ -8,25 +12,46 @@
     position: relative;
     width: 100%;
 }
-.float-label__label {
+.float-label__label__bg {
+    background-image: linear-gradient(180deg, #FFF 55%, #ffffff00 100%);
+    display: block;
+    pointer-events: none;
+    position: absolute;
+    top: 1px;
+    right: calc(var(--vfl-padding-x) - 2px);
+    left: calc(var(--vfl-padding-x) - 2px);
+    height: 26px;
+    opacity: 0;
+    transition: opacity 0.3s;
+}
+textarea:focus ~ .float-label__label .float-label__label__bg {
+    top:2px;
+}
+.float-label__label__text {
     transition: all .2s;
     opacity: 1;
-    left: calc(var(--vfl-x-padding) -2px);
+    left: calc(var(--vfl-padding-x) -2px);
+    display: table;
 }
-.float-label--fade-anim .float-label__label {
+.float-label--fade-anim .float-label__label__text {
     opacity: 0;
 }
 .float-label input, .float-label textarea, .float-label select {
-    padding: var(--vfl-y-padding) var(--vfl-x-padding);
+    padding: var(--vfl-padding-y) var(--vfl-padding-x);
     width: 100%;
     font-size: 16px;
     line-height: 20px;
+    border: var(--border-width) solid var(--border-color);
+    margin-bottom: 6px;
+}
+.float-label input:focus, .float-label textarea:focus, .float-label select:focus {
+    outline: var(--outline-width-focus) solid var(--outline-color-focus);
 }
 
-.float-label input::placeholder, .float-label > textarea::placeholder, .float-label select::placeholder, .float-label__label {
+.float-label input::placeholder, .float-label > textarea::placeholder, .float-label select::placeholder, .float-label__label__text {
     position: absolute;
-    top: var(--vfl-y-padding); 
-    left: var(--vfl-x-padding);
+    top: var(--vfl-padding-y); 
+    left: var(--vfl-padding-x);
     display: block;
     line-height: 24px;
     font-weight: 400;
@@ -38,7 +63,7 @@
 .float-label--fade-anim input::placeholder, .float-label--fade-anim textarea::placeholder {
     color: gray;
 }
-.float-label--fixed .float-label__label, .float-label--on-focus input:focus ~ .float-label__label {
+.float-label--fixed .float-label__label__text, .float-label--on-focus input:focus ~ .float-label__label .float-label__label .float-label__label__text {
     transform-origin: top left;
     transform: scale(.85) translateY(-18px);
     opacity: 1;
@@ -46,6 +71,9 @@
 }
 .float-label--fixed input::placeholder, .float-label--fixed textarea::placeholder {
     opacity: 0;
+}
+.float-label--fixed .float-label__label__bg {
+    opacity: 1;
 }
 .float-label--no-click {
     pointer-events: none;
